--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,179 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&display=swap');
+
+@import url('./styles/loader.css');
+@import url('./styles/dashboard.css');
+
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  background-color: #f5f5f5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  left: 0;
+  margin: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.app-header h3 {
+  margin: 0;
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: 400; 
+  padding-left: 1rem;
+}
+.app-header h6 {
+  color: grey;
+  font-size: 1rem;
+  padding-right: 20px;
+}
+
+.landing-body {
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+}
+.landing-body h2 {
+  font-size: 3rem;
+  font-weight: 500;
+  text-align: center;
+  margin: 0;
+}
+.landing-body h6.subhead {
+    font-size: 24px;
+    color: grey;
+    text-align: center;
+    line-height: 30px;
+    font-weight: 300;
+}
+.landing-form button, .create-session {
+  border-radius: 10px;
+  height: 50px;
+  font-size: 18px;
+  border: none;
+  background: black;
+  color: #f5f5f5;
+}
+.landing-form button:hover {
+  cursor: pointer;
+  background: #333;
+}
+.create-session {
+  width: 160px;
+  margin-right: 20px;
+}
+.create-session.top {
+  height: 40px;
+  font-size: 16px;
+}
+.landing-body input[type="text"] {
+  height: 35px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background: #f5f5f5;
+  padding: 5px;
+  font-size: 18px;
+  padding-left: 20px;
+  width: 300px;
+}
+.landing-body input[type="text"]:focus {
+  outline: none;
+  border: 2px solid #333;
+}
+.landing-body .join-session {
+  background: transparent;
+  color: #000;
+  margin-left: 20px;
+}
+.landing-body button:disabled {
+  background: transparent;
+  color: rgb(199, 192, 192);
+  cursor: not-allowed;
+}
+.landing-body h6.subtext {
+  font-size: 15px;
+  color: grey;
+  text-align: center;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 10px;
+}
+
+.public-sessions {
+  background: #fff;
+  width: 500px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 5px rgba(0,0,0,0.1);
+  margin-top: 100px;
+  height: fit-content;
+}
+.public-session-card {
+  height: 40px;
+  display: flex;
+  border-bottom: 1px solid #000;
+  padding: 30px;
+  padding-bottom: 40px;
+  justify-content: space-between;
+}
+.public-session-card div {
+  display: flex;
+  flex-direction: column;
+}
+.public-session-card h6 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+}
+.public-session-card .session-code {
+  color: grey;
+  font-style: italic;
+  font-size: 14px;
+}
+.public-session-card .session-tips {
+  color: grey;
+  font-size: 13px;
+  font-weight: 300;
+}
+.public-session-card button {
+  border: none;
+  background: transparent;
+  color: #000;
+  font-size: 15px;
+  font-weight: 300;
+  cursor: pointer;
+}
+.public-sessions h4 {
+  margin: 0;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  border-bottom: 1px dashed grey;
+}
+.session-form h4 {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 30px;
+  margin-bottom:10px;
+  display:inline-block;
+  font-family: 'Lato', sans-serif;
+}
+.radio-session {
+  margin-top: 20px;
+}
+button{
+  cursor: pointer;
+}
+.session-form .subhead {
+  margin: 0;
 }
